--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Portfolio Website-Brad</title>
+  <title>Portfolio Website</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- linking css file -->
   <link rel="stylesheet" href="style.css">
   <!-- bootstrap CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- font awesome -->
-  <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
+    </nav>
         <div class="container">
-            <a class="navbar-brand" href="#">Brad</a>
+            <a class="navbar-brand" href="#">Vasanth Kumar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -48,7 +47,7 @@
         <div class="container-fluid">
             <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                <h2 class="hero_title">Hi, it's me Brad</h2>
+                <h2 class="hero_title">Hi, it's me Vasanth Kumar</h2>
                 <p class="hero_desc">I am a professional freelancer in New York City</p>
             </div>
             </div>
@@ -90,7 +89,7 @@
                         <p> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                         </p>
-                    </div>
+                    
                 </div>
             </div>
     </section>
@@ -98,7 +97,7 @@
     <!-- services section-->
     <section id="services">
         <div class="container">
-            <h1 class="text-center">Services</h1>
+            <h1 class="text-center">Skills</h1>
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card servicesText">
@@ -136,7 +135,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row">`
                 <div class="col-lg-4 mt-4">
                     <div class="card servicesText">
                         <div class="card-body">
@@ -300,18 +299,23 @@
         </div>
     </section>
     <!-- footer section-->
-    <footer id="footer">
-        <div class="container-fluid">
-            <!-- social media icons -->
-            <div class="social-icons mt-4">
-                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://www.twitch.tv/" target="_blank"><i class="fab fa-twitch"></i></a>
+    <footer>
+        <div class="footer-container">
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/vasanth-kumar" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                <a href="https://github.com/vasanth-kumar" target="_blank" rel="noopener noreferrer">GitHub</a>
+                <a href="https://twitter.com/vasanth-kumar" target="_blank" rel="noopener noreferrer">Twitter</a>
+            </div>
+            <div class="contact-info">
+                <p>Email: <a href="mailto:vasanth.kumar@example.com">vasanth.kumar@example.com</a></p>
+                <p>Phone: +91-XXXXXXXXXX</p>
+            </div>
+            <div class="footer-credits">
+                <p>&copy; 2024 Vasanth Kumar. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
+    
 
     <!-- load javascript after loading all html content -->
     <script src="script/script.js"></script>
